# hyper-ros2-curriculum

./: .gitignore  README.ko.md  README.md
src/Week01/cpp_pkg1/: CMakeLists.txt  package.xml
src/Week01/cpp_pkg1/src/: cpp_node1.cpp
src/Week01/py_pkg1/: package.xml  setup.py
src/Week01/py_pkg1/py_pkg1/: py_node1.py
src/Week02/HW/my_robot_interfaces/: CMakeLists.txt  package.xml
src/Week02/HW/smart_battery_system/: package.xml  setup.cfg  setup.py
src/Week02/custom_interfaces/: CMakeLists.txt  package.xml
src/Week02/custom_interfaces/srv/: CustomSrv.srv
src/Week03/urdf_leg/: package.xml  setup.cfg  setup.py
src/Week03/urdf_leg/launch/: robot_leg.launch.py
src/Week03/urdf_leg/rviz/: default.rviz
src/Week03/urdf_leg/urdf/: robot_leg.urdf
src/Week04/HW/hyper_pupper_gait/: package.xml  setup.cfg
src/Week04/HW/hyper_pupper_gait/hyper_pupper_gait/: kinematics.py
src/Week04/HW/hyper_pupper_gait/launch/: gait_control.launch.py
src/Week04/hyper_pupper_complete/: package.xml
src/Week04/hyper_pupper_complete/config/: mini_pupper_controllers.yaml
src/hyper_pupper_complete/: CMakeLists.txt  package.xml
src/hyper_pupper_complete/launch/: displaysensors.launch.py
src/hyper_pupper_complete/rviz/: urdf_viewer_new.rviz
src/hyper_pupper_complete/urdf/: accessories_another.urdf.xacro  camera.urdf.xacro  laser.urdf.xacro  ld06.urdf.xacro  leg.urdf.xacro  properties.urdf.xacro
src/hyper_pupper_complete/worlds/: study.sdf
src/hyper_pupper_gait/: setup.py
src/hyper_pupper_gait/hyper_pupper_gait/: teleop_key_node.py
(+11 files in other folders)
